# cudaAzureSample

./: CMakeLists.txt  README.md  heatTranferequation.txt  main.cu
python/: htran.py
src/Conduction/: CMakeLists.txt
